tests/lean/wf1.lean.expected.out
wf1.lean:1:4-1:5: error: fail to show termination for
  g
with errors
failed to infer structural recursion:
Cannot use parameter x:
  failed to eliminate recursive application
    g (x - 1)
Cannot use parameter y:
  insufficient number of parameters at recursive application 
    g (x - 1)


Could not find a decreasing measure.
The basic measures relate at each recursive call as follows:
(<, ≤, =: relation proved, ? all proofs failed, _: no proof attempted)
           x y y - x
1) 3:12-19 ≤ ?     ?
Please use `termination_by` to specify a decreasing measure.
